--- a/sochi/index.html
+++ b/sochi/index.html
@@ -18,9 +18,9 @@ title: Sochi 2014 visualization with Chartmander.js
         <div class="panel panel-sochi">
           <div class="panel-heading">
             <div class="js-range btn-group pull-right">
-              <button type="button" data-offset="-10" class="btn btn-default js-move">Left</button>
+              <button type="button" data-offset="-10" class="btn btn-primary js-move">Left</button>
               <button type="button" class="btn btn-default disabled value">1-10</button>
-              <button type="button" data-offset="10" class="btn btn-default js-move">Right</button>
+              <button type="button" data-offset="10" class="btn btn-primary js-move">Right</button>
             </div>
             <h4>Top countries</h4>
           </div>
@@ -40,17 +40,6 @@ title: Sochi 2014 visualization with Chartmander.js
 </div>
 
 <script>
-
-var athletesData = [
-  {
-    "title": "Men",
-    "values": [{ "label": "men", "value": 5 }]
-  },
-  {
-    "title": "Women",
-    "values": [{ "label": "women", "value": 4 }]
-  }
-];
 
 getMedalsByCountries(0, function (chartData) {
   Chartmander.addChart(function(){
