--- a/sochi/index.html
+++ b/sochi/index.html
@@ -18,9 +18,9 @@ title: Sochi 2014 visualization with Chartmander.js
         <div class="panel panel-sochi">
           <div class="panel-heading">
             <div class="js-range btn-group pull-right">
-              <button type="button" data-offset="-10" class="btn btn-primary js-move">Left</button>
-              <button type="button" class="btn btn-default disabled value">1-10</button>
-              <button type="button" data-offset="10" class="btn btn-primary js-move">Right</button>
+              <button type="button" data-offset="-5" class="btn btn-primary js-move">Left</button>
+              <button type="button" class="btn btn-default disabled value">1-5</button>
+              <button type="button" data-offset="5" class="btn btn-primary js-move">Right</button>
             </div>
             <h4>Top countries</h4>
           </div>
@@ -48,15 +48,16 @@ getMedalsByCountries(0, function (chartData) {
       chart
         .fontColor("#fff")
         .margin({left: 30})
-        .colors(["yellow", "orangered"])
+        .colors(["#c35f00", "#e3e3e3", "#ffbf00"])
         ;
+
+      chart.grid.lineColor("rgba(0,0,0,.3)");
 
       console.log(medals)
       chart.render(medals);
       return chart;
   });
 });
-
 
 getMedalsByAthletes(0, function (chartData) {
   Chartmander.addChart(function(){
@@ -65,14 +66,14 @@ getMedalsByAthletes(0, function (chartData) {
       chart
         .fontColor("#fff")
         .margin({left: 30})
-        .colors(["yellow", "orangered"])
+        .colors(["#c35f00", "#e3e3e3", "#ffbf00"])
         ;
 
+      chart.grid.lineColor("rgba(0,0,0,.3)");
       console.log(medals)
       chart.render(medals);
       return chart;
   });
 });
-
 
 </script>
