--- a/press/index.html
+++ b/press/index.html
@@ -63,12 +63,10 @@
 						</div>
 						<p>najrýchlejšia cesta ako odkomunikovať informáciu človeku</p>
 					</section>
-					<section>
-						<img src="img/app1.jpg" alt="">
-					</section>	
-					<section>
-						<img src="img/app2.png" alt="">
+					<section data-background="img/compare.png">
 					</section>
+					<section data-background="img/dashboard.png">
+					</section>	
 				</section>
 				<section data-background="#269" class="whitey ciele">
 					<section id="ciele">
@@ -77,22 +75,22 @@
 					<section>
 						<h3>1. Cieľ</h3>
 						<h2>Preskúmanie problematiky a možností <br />vizualizácie dát na webových stránkach </h2>
-						<ul>
-							<li class="fragment"><h3>Ozrejmiť proces vizualizácie dát</h3></li>
-							<li class="fragment"><h3>Vyhľadať knižnice určené na vizualizáciu dát</h3></li>
+						<ul class="fragment">
+							<li><h3>Ozrejmiť proces vizualizácie dát</h3></li>
+							<li><h3>Vyhľadať knižnice určené na vizualizáciu dát</h3></li>
 						</ul>
 					</section>
 					<section>
 						<h3>2. Cieľ</h3>
 						<h2>Popísanie nájdených knižníc <br />a ich filtrácia podľa kritérií:</h2>
-						<ul>
-							<li class="fragment">
+						<ul class="fragment">
+							<li>
 								<h3>schopnosť reprezentovať dáta v stĺpcovom, čiarovom a kruhovom diagrame</h3>
 							</li>
-							<li class="fragment">
+							<li>
 								<h3>otvorený zdrojový kód</h3>
 							</li>
-							<li class="fragment">
+							<li>
 								<h3>voľná licencia</h3>
 							</li>
 						</ul>
@@ -100,12 +98,12 @@
 					<section>
 						<h3>Hlavný cieľ</h3>
 						<h2>Návrh vlastnej knižnice</h2>
-						<ul>
-							<li class="fragment"><h3>kruhový, čiarový, stĺpcový diagram</h3></li>
-							<li class="fragment"><h3>Dôraz na animáciu a interaktívne prvky</h3></li>
-							<li class="fragment"><h3>Zhotovenie prezetačnej stránky</h3></li>
-							<!-- <li class="fragment">Priklad použitia knižnice vizualizovaním štatistík z OH Soči prostredníctvom API webovej služby Kimono</li> -->
-							<li class="fragment"><h3>Otvorený repozitár v službe GitHub</h3></li>
+						<ul class="fragment">
+							<li><h3>kruhový, čiarový, stĺpcový diagram</h3></li>
+							<li><h3>Dôraz na animáciu a interaktívne prvky</h3></li>
+							<li><h3>Zhotovenie prezetačnej stránky</h3></li>
+							<!-- <li>Priklad použitia knižnice vizualizovaním štatistík z OH Soči prostredníctvom API webovej služby Kimono</li> -->
+							<li><h3>Otvorený repozitár v službe GitHub</h3></li>
 						</ul>
 					</section>
 				</section>
@@ -177,6 +175,7 @@
 					<section class="violet" data-state="zuslachtenie">
 						<div class="row">
 							<div class="col-sm-4">
+								<img src="img/zuslachtenie.png" alt="">
 							</div>
 							<div class="col-sm-8">
 								<h2>6. Zušľachtenie</h2>
@@ -232,14 +231,21 @@
 						<h2>Správa projektu</h2>
 						<div class="row">
 							<div class="col-sm-4">
-								<img src="img/git.png" width="400px" alt="">
-								
+								<div style="height:250px">
+									<img src="img/git.png" width="400px" alt="">
+								</div>
+								<p>systém na správu verzií</p>
 							</div>
 							<div class="col-sm-4">
-								<img src="img/github.png" width="500px" alt="">
-								
+								<div style="height:250px">
+									<i class="ion-social-github ion-xl"></i>
+								</div>
+								<p>GitHub</p>
 							</div>
 							<div class="col-sm-4">
+								<div style="height:250px">
+									<img src="img/jekyll.png" width="400px" alt="">
+								</div>
 								<p>blogovacia platforma</p>
 							</div>
 						</div>
@@ -322,7 +328,7 @@
 						<h1>Výsledky práce</h1>
 					</section>
 					<section>
-						<h2>Zvolenie knižníc na testovanie</h2>
+						<h2 style="margin-bottom:8rem !important;">Zvolenie knižníc na testovanie</h2>
 						<div class="row">
 							<div class="col-sm-6">
 								<ul class="box selection">
@@ -400,7 +406,7 @@
 								<canvas id="chart-line" width="400" height="300"></canvas>
 							</div>
 							<div class="col-sm-4">
-								<canvas id="chart-pie" width="400" height="300"></canvas>
+								<canvas id="chart-pie" width="250" height="300"></canvas>
 							</div>
 							<div class="col-sm-4">
 								<canvas id="chart-bar" width="400" height="300"></canvas>
@@ -452,7 +458,8 @@
 					</section> -->
 					<section>
 						<h2>Prezentačná stránka</h2>
-						<ol>
+						<img src="img/browser.png" width="110%" alt="">
+<!-- 						<ol>
 							<li class="fragment">
 								<h3>Statická, rýchla blogovacia platforma Jekyll</h3>
 							</li>
@@ -462,7 +469,22 @@
 							<li class="fragment">
 								<h3>Odkaz na stiahnutie knižnice</h3>
 							</li>
-						</ol>
+						</ol> -->
+					</section>
+					<section>
+						<h2>Praktické použitie knižnice</h2>
+						<img src="img/sochi.png" width="110%" alt="">
+<!-- 						<ol>
+							<li class="fragment">
+								<h3>Statická, rýchla blogovacia platforma Jekyll</h3>
+							</li>
+							<li class="fragment">
+								<h3>Ukážky použitia knižnice Chartmander.js</h3>
+							</li>
+							<li class="fragment">
+								<h3>Odkaz na stiahnutie knižnice</h3>
+							</li>
+						</ol> -->
 					</section>
 					<section>
 						<h2>Testovanie knižníc</h2>
@@ -483,17 +505,17 @@
 					</section>
 					<section>
 						<h2>Výsledok testovania</h2>
-						<ul>
-							<li class="fragment">
-								<h3>SVG pamäťovo náročnejšie na operačnú pamäť ako canvas</h3>
+						<ul class="fragment">
+							<li>
+								<h3>SVG náročnejšie na operačnú pamäť ako canvas element</h3>
 							</li>
-							<li class="fragment">
-								<h3>nie vždy platí <code>viac diagramov == viac pamäťe</code></h3>
+							<li>
+								<h3>v zásade platí <code>viac dát == viac pamäťe</code></h3>
 							</li>
-							<li class="fragment">
-								<h3>Koľko dát, toľko pamäte</h3>
+							<li>
+								<h3>počet diagramov vplýva na pamäť len zriedka</h3>
 							</li>
-							<li class="fragment">
+							<li>
 								<h3>Najlpší v <strong>SVG: NVD3</strong>, <strong>canvas: Flot/Chartmander.js</strong></h3>
 							</li>
 						</ul>
@@ -510,11 +532,17 @@
 					</section>
 					<section>
 						<h2>Budúcnosť tejto práce</h2>
-						<ol>
-							<li class="fragment">
-								<h3>Zlepšiť krok zušľachtenia dát v rámci procesu dátovej vizualizácie</h3>
+						<ol class="fragment">
+							<li>
+								<h3>Testovanie knižnice</h3>
 							</li>
-							<li class="fragment">
+							<li>
+								<h3>Doplnenie metód a dokumentácie</h3>
+							</li>
+							<li>
+								<h3>Zhotovenie tooltipu pomocou HTML/CSS</h3>
+							</li>
+							<li>
 								<h3>Vykresľovanie viacerých modelov</h3>
 							</li>
 						</ol>
@@ -660,29 +688,37 @@
 					var chart = Chartmander.select("chart-line", "line");
 
 					chart
-						.colors(["#fff"])
+						.colors(["#1a5631", "#fff"])
+						.easing("easeOutBounce")
+						.pointRadius(10)
+						.lineWidth(5)
 						.showXAxis(false)
 						.showYAxis(false)
-						.render(dataFactory(["Dlhy"], yearByMonths(1), 100))
-
+						;
+					chart.grid.verticalLines(false).horizontalLines(false);
+					chart.render(dataFactory(["Prijmy","Vydavky"], months(3), 100))
 					return chart;
 				})
 				.addChart(function(){
 					var chart = Chartmander.select("chart-pie", "pie");
 
 					chart
-						.colors(["#fff", "#fff", "#fff"])
-						.render(dataFactory(["Dlhy", "Siroky", "Kratkozraky"], yearByMonths(1), 100))
+						.colors(["#1a5631", "#fff", "#fff"])
+						.innerRadius(0.8)
+						.render(dataFactory(["Eat","Sleep","Rave"], ["Day in a Life"], 200))
 					return chart;
 				})
 				.addChart(function(){
 					var chart = Chartmander.select("chart-bar", "bar");
 
 					chart
-						.colors(["#fff"])
+						.colors(["#1a5631","#fff"])
 						.showXAxis(false)
+						.easing("easeOutBounce")
 						.showYAxis(false)
-						.render(dataFactory(["Kratkozraky"], yearByMonths(1), 100))
+						;
+					chart.grid.verticalLines(false).horizontalLines(false);
+					chart.render(dataFactory(["Prijmy","Vydavky"], months(3), 100))
 
 					return chart;
 				});
