--- a/sochi/index.html
+++ b/sochi/index.html
@@ -5,8 +5,8 @@ title: Sochi 2014 visualization with Chartmander.js
 <div class="container">
   <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
-      <header>
-        <h1>Sochi</h1>
+      <header style="margin: 2rem 0;">
+        <img src="../img/sochi.png" width="300px" alt="">
       </header>
       <ul class="nav nav-tabs top-nav">
         <li class="active"><a href="{{site.sochi}}"><i class="ion-speedometer"></i>Overview</a></li>
