--- a/index.html
+++ b/index.html
@@ -65,19 +65,22 @@ title: Chartmander - HTML5 canvas charts
     }).addChart(function(){
       var chart = Chartmander.select("bar1", "bar");
 
-      chart.colors(["rgb(231, 85, 57)"]).render(dataFactory(["Petrol"], yearByMonths(1), 300));
+      chart.colors(["#2e3192"]).render(dataFactory(["Petrol"], yearByMonths(1), 300));
       return chart;
 
     }).addChart(function(){
       var chart = Chartmander.select("pie1", "pie");
+
       chart
-        .render(dataFactory(["Eat","Sleep","Rave","Repeat"], ["Day in a fast Life"], 200));
+        .colors(["#28abe3", "#0071bd", "#2e3192"])
+        .render(dataFactory(["Eat","Sleep","Rave"], ["Day in a fast Life"], 200));
 
       return chart;
     }).addChart(function(){
       var chart = Chartmander.select("pie2", "pie");
       chart
         .innerRadius(0)
+        .colors(["#f15a25", "#fbb03b","#fdee21"])
         .render(dataFactory(["Eat","Sleep","Rave"], ["Day in a Life"], 200));
 
       return chart;
@@ -85,7 +88,8 @@ title: Chartmander - HTML5 canvas charts
       var chart = Chartmander.select("pie3", "pie");
       chart
         .innerRadius(.8)
-        .render(dataFactory(["Used","Ready","Free"], ["Ram Usage"], 200));
+        .colors(["#8cc63e","#009345"])
+        .render(dataFactory(["Used","Ready"], ["Ram Usage"], 200));
 
       return chart;
     });
