--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ title: Chartmander - HTML5 canvas charts
 
   myCharts();
 
-  setInterval(function(){
-    myCharts();
-  }, 4000);
+  // setInterval(function(){
+  //   myCharts();
+  // }, 4000);
 </script>
